Get Plambda version working